--- a/css/application.css
+++ b/css/application.css
@@ -13,4 +13,93 @@
 h1
 {
     font-family: coolfont;
+    text-align: center;
+    font-size: 42pt;
+    margin: 15px;
+}
+nav
+{
+    border: 1px rgb(200, 200, 200) solid;
+    text-align: center;
+    width: 92vh;
+    margin: auto;
+}
+nav ul
+{
+    list-style-type: none;
+    margin: 0px;
+}
+nav ul li
+{
+    font-family: coolfont;
+    font-size: 15pt;
+    margin: 0px;
+}
+a
+{
+    font-family: coolfont;
+    font-weight: bold;
+}
+h2
+{
+    font-family: coolfont;
+    text-align: center;
+    font-size: 35pt;
+    margin: 10px;
+}
+li
+{
+    font-family: coolfont;
+    font-size: 16pt;
+    line-height: 35px;
+    margin-bottom: 30px;
+}
+li img
+{
+    height: 20pt;
+}
+.side
+{
+    border: 2px rgb(200, 200, 200) solid;
+    width: 30vw;
+    background-color: rgb(38, 38, 38);
+    float: right;
+}
+h3
+{
+    font-family: coolfont;
+    text-align: center;
+    font-size: 20pt;
+    margin: 2px;
+}
+.side p
+{
+    margin: 10px;
+    font-size: 12pt;
+}
+#example1
+{
+    height: 100%;
+}
+th, td
+{
+    border: 2px rgb(200, 200, 200) solid;
+    font-family: coolfont;
+}
+th
+{
+    font-size: 18pt;
+}
+td
+{
+    font-size: 14pt;
+}
+td img
+{
+    height: 18pt;
+}
+td:nth-child(2), td:nth-child(3)
+{
+    font-size: 20pt;
+    text-align: center;
 }
