--- a/css/application.css
+++ b/css/application.css
@@ -10,9 +10,14 @@
     font-family: coolfont;
     src: url("fonts/coolfont.woff2")
 }
+@font-face
+{
+    font-family: dragonhunter;
+    src: url("fonts/DragonHunter.otf")
+}
 h1
 {
-    font-family: coolfont;
+    font-family: dragonhunter;
     text-align: center;
     font-size: 42pt;
     margin: 15px;
@@ -32,17 +37,19 @@ nav ul
 nav ul li
 {
     font-family: coolfont;
-    font-size: 15pt;
+    font-size: 16pt;
     margin: 0px;
 }
 a
 {
     font-family: coolfont;
     font-weight: bold;
+    display: block;
+    text-align: center;
 }
 h2
 {
-    font-family: coolfont;
+    font-family: dragonhunter;
     text-align: center;
     font-size: 35pt;
     margin: 10px;
@@ -67,7 +74,7 @@ li img
 }
 h3
 {
-    font-family: coolfont;
+    font-family: dragonhunter;
     text-align: center;
     font-size: 20pt;
     margin: 2px;
@@ -102,4 +109,11 @@ td:nth-child(2), td:nth-child(3)
 {
     font-size: 20pt;
     text-align: center;
+}
+section
+{
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
