--- a/css/application.css
+++ b/css/application.css
@@ -1,8 +1,6 @@
 :root
 {
     background-color: black;
-    background-image: url("images/dragon.png");
-    background-repeat: repeat;
     color: red;
 }
 @font-face
@@ -21,6 +19,7 @@ h1
     text-align: center;
     font-size: 42pt;
     margin: 15px;
+    margin-bottom:0px;
 }
 nav
 {
@@ -37,8 +36,9 @@ nav ul
 nav ul li
 {
     font-family: coolfont;
-    font-size: 16pt;
+    font-size: 14pt;
     margin: 0px;
+    line-height: 25px;
 }
 a
 {
@@ -60,6 +60,11 @@ li
     font-size: 16pt;
     line-height: 35px;
     margin-bottom: 30px;
+    list-style-position: inside;
+}
+li li
+{
+    padding-left: 20px;
 }
 li img
 {
@@ -68,9 +73,11 @@ li img
 .side
 {
     border: 2px rgb(200, 200, 200) solid;
-    width: 30vw;
+    width: 35vw;
     background-color: rgb(38, 38, 38);
     float: right;
+    margin:15px;
+    margin-top:0px;
 }
 h3
 {
@@ -90,7 +97,7 @@ h3
 }
 th, td
 {
-    border: 2px rgb(200, 200, 200) solid;
+    border: 5px rgb(82, 103, 103) ridge;
     font-family: coolfont;
 }
 th
@@ -116,4 +123,9 @@ section
     margin-right: 25px;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+#credit
+{
+    font-size: 18pt;
+    margin:0px;
 }
